--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Melody - Your favourite music is here</title>
+        <title>Melody - Let the Music take you away </title>
         <link rel="stylesheet" href="style.css">
         </head>
 <body> 
     <nav>
         <ul>
-            <li class="brand"><img src="logo.png" alt="Spotify"> Melody</li>
+            <li class="brand"><img src="logo.png" alt="Melody"> Melody</li>
             <li>Home</li>
             <li>About</li>
         </ul>
