--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <ul>
             <li class="brand"><img src="logo.png" alt="Melody"> Melody</li>
             <li>Home</li>
-            <li>About</li>
+            <li><a href="index2.html">About</a></li>
         </ul>
     </nav>
 
     <div class="container">
         <div class="songList">
-            <h1>Welcome to Melody!</h1>
+            <h1>My Playlist! - Start where you left off</h1>
             <div class="songItemContainer">
                 <div class="songItem">
                     <img alt="1">
